[metadata]
name = pyDHM
version = 1.1
author = Carlos Trujillo
author_email = catrujilla@eafit.edu.co
description = An open-source Python library to numerically recover the complex wavefield information of samples from Digital Holographic Microscopy (DHM) for a wide variety of experimental recording configurations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catrujilla/pyDHM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True